--- a/1_titlepage.tex
+++ b/1_titlepage.tex
@@ -69,8 +69,12 @@ Departamento de Física Teórica
 
 \HRule \medskip
 
-{\LARGE \bfseries \MakeUppercase{Una vista panorámica a los atractores homeostático, Alzheimer y Glioblastoma} %[5pt] %\MakeUppercase{}
+%{\LARGE \bfseries \MakeUppercase{Una vista panorámica a los atractores homeostático, Alzheimer y Glioblastoma} %[5pt] %\MakeUppercase{}
+%}
+
+{\LARGE \bfseries \MakeUppercase{Exploración los atractores homeostático, Alzheimer y Glioblastoma} %[5pt] %\MakeUppercase{}
 }
+
 
 \smallskip
 \HRule
