--- a/bibl.bib
+++ b/bibl.bib
@@ -8,31 +8,132 @@
 }
 
 @Article{casey2020theory,
-  author    = {Casey, Michael J. and Stumpf, Patrick S. and MacArthur, Ben D.},
-  journal   = {WIREs Systems Biology and Medicine},
-  title     = {Theory of cell fate},
-  year      = {2019},
-  issn      = {1939-005X},
-  month     = dec,
-  number    = {2},
-  pages     = {e1471},
-  volume    = {12},
-  doi       = {10.1002/wsbm.1471},
-  publisher = {Wiley},
+  author  = {Casey, Michael J. and Stumpf, Patrick S. and MacArthur, Ben D.},
+  journal = {WIREs Systems Biology and Medicine},
+  title   = {Theory of cell fate},
+  year    = {2019},
+  issn    = {1939-005X},
+  month   = dec,
+  number  = {2},
+  pages   = {e1471},
+  volume  = {12},
+  doi     = {10.1002/wsbm.1471},
 }
 
 @Article{ou2012does,
-  author    = {Ou, Shuo-Ming and Lee, Yi-Jung and Hu, Yu-Wen and Liu, Chia-Jen and Chen, Tzeng-Ji and Fuh, Jong-Ling and Wang, Shuu-Jiun},
-  journal   = {Neuroepidemiology},
-  title     = {Does Alzheimer’s Disease Protect against Cancers? A Nationwide Population-Based Study},
+  author  = {Ou, Shuo-Ming and Lee, Yi-Jung and Hu, Yu-Wen and Liu, Chia-Jen and Chen, Tzeng-Ji and Fuh, Jong-Ling and Wang, Shuu-Jiun},
+  journal = {Neuroepidemiology},
+  title   = {Does Alzheimer’s Disease Protect against Cancers? A Nationwide Population-Based Study},
+  year    = {2012},
+  issn    = {1423-0208},
+  month   = oct,
+  number  = {1},
+  pages   = {42--49},
+  volume  = {40},
+  doi     = {10.1159/000341411},
+}
+
+@Article{Driver_2012,
+  author  = {Driver, J. A. and Beiser, A. and Au, R. and Kreger, B. E. and Splansky, G. L. and Kurth, T. and Kiel, D. P. and Lu, K. P. and Seshadri, S. and Wolf, P. A.},
+  journal = {BMJ},
+  title   = {Inverse association between cancer and Alzheimer’s disease: results from the Framingham Heart Study},
+  year    = {2012},
+  issn    = {1468-5833},
+  month   = mar,
+  number  = {mar12 1},
+  pages   = {e1442--e1442},
+  volume  = {344},
+  doi     = {10.1136/bmj.e1442},
+}
+
+@Article{Roe_2010,
+  author  = {Roe, C. M. and Fitzpatrick, A. L. and Xiong, C. and Sieh, W. and Kuller, L. and Miller, J. P. and Williams, M. M. and Kopan, R. and Behrens, M. I. and Morris, J. C.},
+  journal = {Neurology},
+  title   = {Cancer linked to Alzheimer disease but not vascular dementia},
+  year    = {2010},
+  issn    = {1526-632X},
+  month   = jan,
+  number  = {2},
+  pages   = {106--112},
+  volume  = {74},
+  doi     = {10.1212/wnl.0b013e3181c91873},
+}
+
+@Article{Musicco_2013,
+  author  = {Musicco, Massimo and Adorni, Fulvio and Di Santo, Simona and Prinelli, Federica and Pettenati, Carla and Caltagirone, Carlo and Palmer, Katie and Russo, Antonio},
+  journal = {Neurology},
+  title   = {Inverse occurrence of cancer and Alzheimer disease: A population-based incidence study},
+  year    = {2013},
+  issn    = {1526-632X},
+  month   = jul,
+  number  = {4},
+  pages   = {322--328},
+  volume  = {81},
+  doi     = {10.1212/wnl.0b013e31829c5ec1},
+}
+
+@Article{Liu_2013,
+  author  = {Liu, Timothy and Ren, Ding and Zhu, Xiaoping and Yin, Zheng and Jin, Guangxu and Zhao, Zhen and Robinson, Daniel and Li, Xuping and Wong, Kelvin and Cui, Kemi and Zhao, Hong and Wong, Stephen T. C.},
+  journal = {Scientific Reports},
+  title   = {Transcriptional signaling pathways inversely regulated in Alzheimer’s disease and glioblastoma multiform},
+  year    = {2013},
+  issn    = {2045-2322},
+  month   = dec,
+  number  = {1},
+  volume  = {3},
+  doi     = {10.1038/srep03467},
+}
+
+@Article{Lanni_2020,
+  author  = {Lanni, Cristina and Masi, Mirco and Racchi, Marco and Govoni, Stefano},
+  journal = {Molecular Psychiatry},
+  title   = {Cancer and Alzheimer’s disease inverse relationship: an age-associated diverging derailment of shared pathways},
+  year    = {2020},
+  issn    = {1476-5578},
+  month   = may,
+  number  = {1},
+  pages   = {280--295},
+  volume  = {26},
+  doi     = {10.1038/s41380-020-0760-2},
+}
+
+@Article{Cai_2022,
+  author  = {Cai, Jiayang and Ye, Liguo and Hu, Yuanyuan and Ye, Zhang and Gao, Lun and Wang, Yixuan and sun, Qian and Tong, Shiao and Yang, Ji’an and Chen, Qianxue},
+  journal = {Medical Oncology},
+  title   = {Exploring the inverse association of glioblastoma multiforme and Alzheimer’s disease via bioinformatics analysis},
+  year    = {2022},
+  issn    = {1559-131X},
+  month   = sep,
+  number  = {12},
+  volume  = {39},
+  doi     = {10.1007/s12032-022-01786-w},
+}
+
+@Article{Magalh_es_2012,
+  author    = {Magalhães, João Pedro},
+  journal   = {The FASEB Journal},
+  title     = {Programmatic features of aging originating in development: aging mechanisms beyond molecular damage?},
   year      = {2012},
-  issn      = {1423-0208},
-  month     = oct,
-  number    = {1},
-  pages     = {42--49},
-  volume    = {40},
-  doi       = {10.1159/000341411},
-  publisher = {S. Karger AG},
+  issn      = {1530-6860},
+  month     = sep,
+  number    = {12},
+  pages     = {4821--4826},
+  volume    = {26},
+  doi       = {10.1096/fj.12-210872},
+  publisher = {Wiley},
+}
+
+@Article{Gems_2022,
+  author    = {Gems, David},
+  journal   = {Ageing Research Reviews},
+  title     = {The hyperfunction theory: An emerging paradigm for the biology of aging},
+  year      = {2022},
+  issn      = {1568-1637},
+  month     = feb,
+  pages     = {101557},
+  volume    = {74},
+  doi       = {10.1016/j.arr.2021.101557},
+  publisher = {Elsevier BV},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
