Finished introduction (at least the first version) and add other bibliography

--- a/bibl.bib
+++ b/bibl.bib
@@ -136,4 +136,59 @@
   publisher = {Elsevier BV},
 }
 
+@Article{A_Driver_2010,
+  author    = {A. Driver, Jane and Ping Lu, Kun},
+  journal   = {Current Aging Sciencee},
+  title     = {Pin1: A New Genetic Link between Alzheimers Disease, Cancer and Aging},
+  year      = {2010},
+  issn      = {1874-6098},
+  month     = dec,
+  number    = {3},
+  pages     = {158--165},
+  volume    = {3},
+  doi       = {10.2174/1874609811003030158},
+  publisher = {Bentham Science Publishers Ltd.},
+}
+
+@Article{Choe2002,
+  author   = {Choe, Gheeyoung and Park, Jun K. and Jouben-Steele, Lisa and Kremen, Thomas J. and Liau, Linda M. and Vinters, Harry V. and Cloughesy, Timothy F. and Mischel, Paul S.},
+  journal  = {Clinical Cancer Research},
+  title    = {Active Matrix Metalloproteinase 9 Expression Is Associated with Primary Glioblastoma Subtype1},
+  year     = {2002},
+  issn     = {1078-0432},
+  month    = {09},
+  number   = {9},
+  pages    = {2894-2901},
+  volume   = {8},
+  abstract = {Purpose: Glioblastoma multiforme (GBM) is an aggressive cancer characterized by extensive brain invasion. Matrix metalloproteinase (MMP)-9 plays a major role in this process. GBMs can be divided into two subtypes based on distinct clinical and molecular features. Primary GBMs arise de novo and frequently overexpress the epidermal growth factor receptor (EGFR) and its ligand-independent variant, EGFR variant III (EGFRvIII); secondary GBMs progress from a lower grade glioma and commonly harbor p53 mutations. Because EGFR signaling promotes MMP-9 expression and activation in other cancer cell types, we analyzed whether MMP-9 was associated with primary GBM subtype.Experimental Design: Autopsies were performed on 20 GBM patients, and MMP expression was assessed by gelatin zymography in the tumor and the adjacent normal brain. EGFR, EGFRvIII, p53, and activated mitogen-activated protein kinase/extracellular signal-regulated kinase were assessed by immunohistochemistry, and associations between molecular phenotype and MMP-9 expression were analyzed.Results: Latent MMP-9 was detected in 90\% of tumors, and active MMP-9 was found in 50\% of tumors. MMP-9 was not detected in any of the normal brain samples (P \&lt; 0.001). More importantly, primary GBMs were significantly more likely than secondary GBMs to contain active MMP-9 (69\% of primary and 14\% of secondary GBMs contained active MMP-9; P = 0.027). Active MMP-9 was observed in 73\% of EGFR-overexpressing/wild-type p53-staining tumors but in only 20\% of EGFR-negative/aberrant p53-staining tumors (P = 0.072). Active MMP-9 expression was even more strongly correlated with EGFRvIII expression, occurring in 83\% of the EGFRvIII-immunopositive tumors but in none of the EGFRvIII-negative tumors (P = 0.0004). Extracellular signal-regulated kinase activation was also strongly correlated with EGFRvIII expression (P \&lt; 0.0001) and with MMP-9 activation (P = 0.003).Conclusions: These results identify a novel association between MMP-9 activation and primary GBM subtype and suggest that primary GBM patients, especially those whose tumors express EGFRvIII, may benefit from anti-MMP therapy.},
+  eprint   = {https://aacrjournals.org/clincancerres/article-pdf/8/9/2894/2082924/df0902002894.pdf},
+}
+
+@Article{Xue_2017,
+  author    = {Xue, Qiang and Cao, Li and Chen, Xiao-Yan and Zhao, Jing and Gao, Liang and Li, San-Zhong and Fei, Zhou},
+  journal   = {Oncology Letters},
+  title     = {High expression of MMP9 in glioma affects cell proliferation and is associated with patient survival rates},
+  year      = {2017},
+  issn      = {1792-1082},
+  month     = jan,
+  number    = {3},
+  pages     = {1325--1330},
+  volume    = {13},
+  doi       = {10.3892/ol.2017.5567},
+  publisher = {Spandidos Publications},
+}
+
+@Article{Kaminari_2017,
+  author    = {Kaminari, Archontia and Giannakas, Nikolas and Tzinia, Athina and Tsilibary, Effie C.},
+  journal   = {Scientific Reports},
+  title     = {Overexpression of matrix metalloproteinase-9 (MMP-9) rescues insulin-mediated impairment in the 5XFAD model of Alzheimer’s disease},
+  year      = {2017},
+  issn      = {2045-2322},
+  month     = apr,
+  number    = {1},
+  volume    = {7},
+  doi       = {10.1038/s41598-017-00794-5},
+  publisher = {Springer Science and Business Media LLC},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
