--- a/4_introduccion.tex
+++ b/4_introduccion.tex
@@ -16,24 +16,29 @@ Un paradigma conocido en la biología molecular expresa que los máximos locales
 	\label{fig:wrightDiagram}
 \end{figure}
 
-Esta representación ha sido aplicada a la descripción del destino celular a lo largo de una linea de diferenciación \cite{casey2020theory}. Sin embargo, hasta donde sabemos, no hay gráficos basados en datos reales para un tejido dado que represente al menos de forma parcial un diagrama de Wright con más de dos máximos. En el presente trabajo, mostramos un diagrama para la materia blanca del cerebro en el cual el estado normal (N) se representa junto con el atractor de glioblastoma (GBM) y el máximo relacionado con la enfermedad del Alzheimer (EA).
+Esta representación ha sido aplicada a la descripción del destino celular a lo largo de una linea de diferenciación \cite{casey2020theory}. Sin embargo, hasta donde sabemos, no hay gráficos basados en datos reales para un tejido dado que represente, al menos de forma parcial, un diagrama de Wright con más de dos máximos. En el presente trabajo, mostramos un diagrama para la materia blanca del cerebro en el cual el estado normal (N) se representa junto con el atractor de glioblastoma (GBM) y el máximo relacionado con la enfermedad del Alzheimer (EA).
 
 La EA se caracteriza por la pérdida progresiva de células neuronales, mientras que el GBM es un tipo de cáncer cerebral que implica la proliferación descontrolada de células. Algunas investigaciones muestran que pacientes con la EA podrían tener un menor riesgo de desarrollar GBM. Por ejemplo, en la referencia \cite{ou2012does} muestran que ambas enfermedades presentan un aumento en el estrés oxidativo, pero en la EA, esto hace que las células neuronales sean más vulnerables a la muerte, mientras que en el GBM, las células cancerosas se vuelven más resistentes. Además, plantean que la degeneración de células que secretan acetilcolina en la EA podría tener un efecto protector contra el cáncer, ya que esta sustancia puede estimular el crecimiento de células cancerosas.
 
 
 %En \cite{Driver_2012} concluyen que los sobrevivientes de cáncer tienen un riesgo 33 \% menor de desarrollar la EA en comparación con aquellos sin antecedentes de cáncer. Las personas con la EA tienen un riesgo 61 \% menor de desarrollar cáncer. En \cite{Musicco_2013} encuentran que el riesgo de cáncer en pacientes con la EA se reduce a la mitad, y el riesgo de padecer la EA en pacientes con cáncer se reduce en un 35 \%.
-Como se reporta en  \cite{Roe_2010, Driver_2012, Musicco_2013}, los datos sugieren que los pacientes con cáncer tienen un riesgo alrededor de 31 y 35 \% menor de desarrollar la EA en comparación con aquellos sin antecedente de cáncer. Mientras que los personas que padecen la EA tienen un riesgo entre 41 y 61 \% menor de desarrollar cáncer.
+Estudios epidemiológicos reportan que los pacientes con cáncer tienen un riesgo alrededor de 31 y 35 \% menor de desarrollar la EA en comparación con aquellos que sin antecedente de cáncer. Mientras que las personas que padecen la EA tienen un riesgo entre 41 y 61 \% menor de desarrollar cáncer \cite{Roe_2010, Driver_2012, Musicco_2013}.
+%Como se reporta en  \cite{Roe_2010, Driver_2012, Musicco_2013}, los datos sugieren que los pacientes con cáncer tienen un riesgo alrededor de 31 y 35 \% menor de desarrollar la EA en comparación con aquellos sin antecedente de cáncer. Mientras que los personas que padecen la EA tienen un riesgo entre 41 y 61 \% menor de desarrollar cáncer.
 
-Además de estudios epidemiológicas, otras experimentos de biología molecular refuerzan la contraposición entre la EA y el GBM. Por ejemplo, en la referencia \cite{Liu_2013} encuentran que las vías de señalización ERK/MAPK están aumentadas en GBM y disminuidas en la EA. Esta vía conecta señales extracelulares, como factores de crecimiento y citocinas, a respuestas intracelulares que regulan la proliferación celular, diferenciación y supervivencia. También muestran que las vías de señalización de la angiopoyetina están aumentadas en la EA y disminuidas en GBM, estas relacionadas con la regulación de la angiogénesis y la estabilidad vascular.
+La idea relación entre la EA y el GBM como alternativas opuestas se encuentra reforzada por varios experintos de biología molecular. Por ejemplo, en la referencia \cite{Liu_2013} encuentran que las vías de señalización ERK/MAPK están aumentadas en GBM y disminuidas en la EA. Estas vías conectan señales extracelulares, como factores de crecimiento y citocinas, a respuestas intracelulares que regulan la proliferación celular, diferenciación y supervivencia. También muestran que las vías de señalización de la angiopoyetina están aumentadas en la EA y disminuidas en GBM, estas relacionadas con la regulación de la angiogénesis y la estabilidad vascular.
 
-El estudio realizados en la referencia \cite{Lanni_2020} destacan varios actores moleculares, especialmente PIN1 y p53, que están involucrados en interacciones moleculares complejas asociadas con esta correlación inversa. El aumento en la expresión de PIN1 esta relacionado con un retraso en la edad de inicio de la EA, mientras niveles bajos de expresión se asocian con un menor riesgo de múltiples cáncer.
+El estudio realizados en la referencia \cite{Lanni_2020} destacan varios actores moleculares, especialmente PIN1 y p53, que están involucrados en interacciones moleculares complejas asociadas con esta correlación inversa. El aumento en la expresión de PIN1 esta relacionado con un retraso en la edad de inicio de la EA, mientras niveles bajos de expresión se asocian con un menor riesgo de desarrollar varios tipos de cáncer.
 
-Dichas investigaciones no solo muestran que a la EA y el cáncer son alternativas opuestas, sino que también señalan el envejecimiento como un factor de riesgo común para ambas enfermedades. Esta compleja relación se ve representada en nuestro diagrama de Wright. Además, se muestra un camino o corredor hacia el envejecimiento normal, en concordancia con la 	teoría del envejecimiento programado \cite{Magalh_es_2012, 	Gems_2022}
+Varias investigaciones no solo muestran una oposición entre la EA y el GBM, sino que también señalan el envejecimiento como un factor de riesgo común para ambas enfermedades \cite{Driver_2012, Musicco_2013 , Liu_2013, Lanni_2020, A_Driver_2010}. Esta compleja relación entre ambas enfermedades cerebrales puede analizarse de manera sencilla utilizando nuestro diagrama de Wright. Además, se puede apreciar un camino o corredor hacia el envejecimiento normal, en línea con la teoría del envejecimiento programado \cite{Magalh_es_2012, 	Gems_2022}.
 
-\alert{El trabajo presentado como tesis de diploma consta de una introducción, tres capítulos,las conclusiones y las recomendaciones. El contenido se distribuye de la siguiente forma:}
+A nivel genético, hay genes que varían de la misma manera en los procesos de envejecimiento, progresión de AD y cáncer, mientras que también hay genes que indican una situación disyuntiva entre la EA y el GBM. Un ejemplo de este último es el gen codificador de proteínas MMP9, que juega un papel importante en la invasión tumoral \cite{Choe2002, Xue_2017}, pero también conocido como neuroprotector, controlando las interacciones entre axones y fibras beta-amiloide \cite{Kaminari_2017}. Las desviaciones del valor de expresión génica de su referencia en el tejido normal pueden indicar una progresión potencial a AD (subexpresión) o a GBM (sobreexpresión).
+
+Esta visión inusual puede ayudar a comprender las relaciones entre la EA y el GBM, e identificar marcadores génicos útiles para ambos procesos. Como un bono adicional, la representación permite encontrar preguntas muy interesantes que se discutirán a continuación.
+
+\alert{El trabajo presentado como tesis de diploma consta de una introducción, tres capítulos, las conclusiones y las recomendaciones. El contenido se distribuye de la siguiente forma:}
 
 \begin{itemize}
-	\item[$\bullet$] \textbf{Introducción:}
+	\item[$\bullet$] \textbf{Introducción:} Se hace una breve descripción del panorama genético y epidemiológico que engloban a la EA, el GBM y el envejecimiento. Se ejemplifican las relaciones que existen entre estos atractores.
 	
 	\item[$\bullet$] \textbf{Capítulo 1:} 
 	
